--- a/plochonozi/css/style.css
+++ b/plochonozi/css/style.css
@@ -68,3 +68,8 @@ body {
   position: fixed !important; top: 50% !important; transform: translateY(-50%);
 }
 
+#quiz + .error{
+  margin-top: 10px;
+  color: #dc3545;
+}
+
